# t4

task4b/: CMakeLists.txt  package.xml
task4b/launch/: task4b_hardware.launch.py  task4b_nodes.launch.py
task4b/scripts/: cartesian_velocity_control.py  ebot_nav_task4b.py  joint_jog_control.py  magnet.py  shape_detection_test.py  shape_detector_task4b.py  simple_waypoint_test.py  task4b_manipulation.py  task4b_message_publisher.py  task4b_navigation.py  task4b_perception.py  task4b_shape_detector.py  tcp_pose_printer.py
